--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"files": [
-		"dist"
+		"dist/**/*"
 	],
 	"scripts": {
 		"start": "nodemon src/index.ts",
@@ -13,8 +13,12 @@
 		"clean": "rmdir dist /S /Q",
 		"build": "tsc",
 		"prepare": "npm run build",
+		"preversion": "npm run lint",
+		"postversion": "git push && git push --tags",
+		"version": "npm run format && git add -A src",
+		"prepublishOnly": "npm test && npm run lint",
 		"refresh": "rm -rf ./node-modules ./package-lock.json && npm install",
-		"prettier": "prettier --config .prettierrc.json --write src/**/*.ts",
+		"format": "prettier --write \"src/**/*.ts\"",
 		"tdocs": "typedoc --out ./typedocs --exclude **/node_modules/**  ./src --readme ./README.md",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
@@ -22,7 +26,7 @@
 		"type": "git",
 		"url": "git+https://github.com/Vladimirbr/vb-logger.git"
 	},
-	"author": "Vladimir Brum",
+	"author": "VB",
 	"keywords": [
 		"winston",
 		"logger",
@@ -38,17 +42,17 @@
 	},
 	"homepage": "https://github.com/Vladimirbr/vb-logger#readme",
 	"dependencies": {
-		"winston": "^3.3.3"
+		"winston": "^3.6.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.15",
-		"prettier": "^2.4.1",
-		"ts-node": "^10.4.0",
-		"typedoc": "^0.22.8",
-		"typescript": "^4.4.4"
+		"prettier": "^2.5.1",
+		"ts-node": "^10.5.0",
+		"typedoc": "^0.22.11",
+		"typescript": "^4.5.5"
 	},
 	"engines": {
-		"node": ">=14.16.0",
-		"npm": ">=7.6.3"
+		"node": "16.13.0",
+		"npm": "8.1.0"
 	}
 }
